# goklinikapp

./: .gitignore
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README_BACKEND_SETUP.md  docker-compose.yml  firebase_init.py  manage.py  nixpacks.toml  pyproject.toml  start_gunicorn.sh
backend/apps/appointments/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/chat/: admin.py  ai_service.py  models.py  serializers.py  urls.py  views.py
backend/apps/financial/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/medical_records/: admin.py  apps.py  audit.py  models.py  serializers.py  urls.py  views.py
backend/apps/notifications/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/patients/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/post_op/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/pre_operatory/: apps.py  models.py  serializers.py  views.py
backend/apps/referrals/: admin.py  models.py  public_urls.py  serializers.py  urls.py  views.py
backend/apps/tenants/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/travel_plans/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/users/: access.py  admin.py  dashboard_views.py  invite_email.py  models.py  (+7 more)
backend/config/: asgi.py  celery.py  media_urls.py  urls.py  wsgi.py
backend/services/: storage_paths.py  supabase_storage.py
(+390 files in other folders)
